fix(style) remove overflow:hidden from container

--- a/app/assets/stylesheets/app/layout.sass
+++ b/app/assets/stylesheets/app/layout.sass
@@ -1,11 +1,9 @@
 html, body.app
   height: 100%
-  overflow-x: hidden
 
   & > .container
     padding-left: 0
     padding-right: 0
-    overflow-x: hidden
 
 // ==========  Mobile First Method  ==========
 /* Custom, iPhone Retina */
